# stuff

./: CMakeLists.txt
.github/workflows/: ccpp.yml
cmake/: CheckCoroutineSupport.cmake  CheckCoroutineSupport.cpp  CheckPerfectForwarding.cpp  CheckUnicodeSupport.cmake  CheckUnicodeSupport.cpp  GenericTargetOptions.cmake
cpp/: mh_stuff.natvis
cpp/include/mh/concurrency/: dispatcher.hpp  dispatcher.inl  thread_pool.hpp
cpp/include/mh/coroutine/: coroutine_common.hpp  coroutine_include.hpp  eager_task.hpp  future.hpp  generator.hpp  task.hpp  thread.hpp  thread.inl
cpp/include/mh/data/: bit_float.hpp  bits.hpp
cpp/include/mh/error/: ensure.hpp  expected.hpp
cpp/include/mh/io/: file.hpp  getopt.hpp
cpp/include/mh/math/: uint128.hpp
cpp/include/mh/memory/: checked_ptr.hpp  unique_object.hpp
cpp/include/mh/raii/: scope_exit.hpp
cpp/include/mh/reflection/: enum.hpp
cpp/include/mh/synchronization/: semaphore.hpp
cpp/include/mh/text/: charconv_helper.hpp  codecvt.hpp  codecvt.inl  fmtstr.hpp  memstream.hpp  multi_char.hpp  stringops.hpp
cpp/src/io/: file.cpp
test/: CMakeLists.txt  Makefile2  coroutine_task_test.cpp  test_synchronization_semaphore.cpp  text_memstream_test.cpp
